(lang dune 2.9)
(name main)
(generate_opam_files true)

(package
 (name main)
 (synopsis "A Bluesky bot written in OCaml")
 (description "This bot automatically follows/unfollows users and reposts mentions on Bluesky")
 (maintainers "Luis Vaz <me@rastrian.dev>")
 (authors "Luis Vaz")
 (homepage "https://github.com/Rastrian/bluesky-bot")
 (bug_reports "https://github.com/Rastrian/bluesky-bot/issues")
 (depends
  (ocaml (>= 4.14.0))
  (dune (>= 2.9))
  (lwt (>= 5.5.0))
  (lwt_ppx (>= 2.0.0))
  (cohttp-lwt-unix (>= 5.0.0))
  (yojson (>= 2.0.0))
  (redis-lwt (>= 0.5))
  (logs (>= 0.7.0))
  (fmt (>= 0.9.0))
  (ptime (>= 1.1.0))
  (tls (>= 0.15.0))
  (tls-lwt (>= 0.15.0))
  (x509 (>= 0.11.0))
  (ipaddr (>= 5.0.0))
  (ssl (>= 0.5.10))))